fixed csss issue

--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -28,10 +28,10 @@
           </a>
         </div>
         <ul class="nav-menu">
-          <li><a href="/" class="nav-link">Home</a></li>
-          <li><a href="/about.html" class="nav-link">About</a></li>
-          <li><a href="/contact.html" class="nav-link">Contact</a></li>
-          <li><a href="/atom.xml" class="nav-link">RSS</a></li>
+          <li><a href="./" class="nav-link">Home</a></li>
+          <li><a href="./about.html" class="nav-link">About</a></li>
+          <li><a href="./contact.html" class="nav-link">Contact</a></li>
+          <li><a href="./atom.xml" class="nav-link">RSS</a></li>
         </ul>
       </div>
     </nav>
