Fix back to articles link for GitHub Pages

--- a/assets/templates/article.html
+++ b/assets/templates/article.html
@@ -37,7 +37,7 @@
     <div class="article-content">{{ yocaml_body | safe }}</div>
 
     <footer class="article-footer">
-      <a href="/index.html" class="back-link">
+      <a href="/yocaml_blog/index.html" class="back-link">
         <span class="back-arrow">←</span>
         <span>Back to all articles</span>
       </a>
