--- a/assets/templates/article.html
+++ b/assets/templates/article.html
@@ -1,3 +1,6 @@
+{% extends "layout.html" %}
+
+{% block content %}
 <div class="content-wrapper">
   <article class="article-page">
     <header class="article-header">
@@ -44,3 +47,4 @@
     </footer>
   </article>
 </div>
+{% endblock %}
