--- a/assets/templates/layout.html
+++ b/assets/templates/layout.html
@@ -7,7 +7,7 @@
     {% if description %}
     <meta name="description" content="{{ description }}" />
     {% endif %}
-    <link rel="stylesheet" href="/yocaml_blog/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,9 +29,9 @@
         </div>
         <ul class="nav-menu">
            <li><a href="/yocaml_blog/" class="nav-link">Home</a></li>
-          <li><a href="/yocaml_blog/about.html" class="nav-link">About</a></li>
-          <li><a href="/yocaml_blog/contact.html" class="nav-link">Contact</a></li>
-          <li><a href="/yocaml_blog/atom.xml" class="nav-link">RSS</a></li>
+          <li><a href="./about.html" class="nav-link">About</a></li>
+          <li><a href="./contact.html" class="nav-link">Contact</a></li>
+          <li><a href="./atom.xml" class="nav-link">RSS</a></li>
         </ul>
       </div>
     </nav>
